# RPG-GAME-2D

./: CMakeLists.txt  README.md
sprites/tilesets/: Finish.tsx
src/: Animation.cpp  Animation.h  Bot1.cpp  Bot1.h  Bot2.cpp  Bot2.h  Ghost.cpp  Ghost.h  Inject.cpp  Inject.h  Player.cpp  Player.h  Skeleton.cpp  Skeleton.h  Skeleton2.cpp  Skeleton2.h  Skeleton3.cpp  Skeleton3.h  TileMap.cpp  TileMap.h  TitleMap.cpp  TitleMap.h  Wizard.cpp  Wizard.h  main.cpp
